fix overflows

--- a/src/index.css
+++ b/src/index.css
@@ -501,7 +501,7 @@ body {
         .userCard {
           box-shadow: 0px 0px 2px rgba(204, 204, 204, 0.8);
           padding: 1rem;
-          max-width: 273px;
+          max-width: 290px;
           &:hover {
             background-color: #cccccc0f;
           }
@@ -530,6 +530,9 @@ body {
 }
 
 @media screen and (max-width: 560px) {
+  .followers {
+    place-content: center;
+  }
   .trending {
     padding: 0 1rem;
   }
